--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <meta name="author" content="Lovable" />
     <meta property="og:image" content="/og-image.png" />
     <!-- <link rel="icon" type="image/x-icon" href="/favicon.ico" /> -->
-    <link rel="icon" type="image/jpg" href="/favicon.ico"/>
+    <!-- <link rel="icon" type="image/jpg" href="/favicon.ico"/> -->
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🦄</text></svg>"></link>
 
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
   </head>
